force-app/main/default/objects/Meter_Allocation__c/Meter_Allocation__c.object-meta.xml
<CustomObject>
    <description>Split basis where one meter serves several spaces (FSD 5.10.3). Exists only where an allocation is required. Covers the arrangements FSD 5.10.1 names: shared meters, management paid vacant spaces, square footage splits, tenant settlements.</description>
    <label>Meter Allocation</label>
    <nameField>
        <displayFormat>MA-{00000}</displayFormat>
        <label>Meter Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <!--
      Master detail to Meter__c rather than a lookup, because that is what makes
      Meter__c.Total_Allocated_Pct__c a roll up summary. With a lookup, the question of
      whether allocations sum to 100 percent could only be answered in Apex. The roll up is
      published as a number only; no validation rule is created here, because FSD 5.10 does
      not ask for one and whether 100 percent is mandatory is still an open question.
    -->
</CustomObject>