force-app/main/default/objects/Meter_Allocation__c/fields/Allocation_Basis__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Basis__c</fullName>
    <description>How this share of the meter was arrived at. The five values are exactly the arrangements FSD 5.10.1 names as what the utility workbooks capture: shared meters, management paid vacant spaces, square footage splits and tenant to tenant settlements.</description>
    <inlineHelpText>Square Footage means the share tracks the space size and should agree with Square Feet below. Fixed Percentage means the split was negotiated and does not move with area.</inlineHelpText>
    <label>Allocation Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Square Footage</fullName>
            </value>
            <value>
                <fullName>Fixed Percentage</fullName>
            </value>
            <value>
                <fullName>Equal Split</fullName>
            </value>
            <value>
                <fullName>Tenant-to-Tenant Settlement</fullName>
            </value>
            <value>
                <fullName>Management-Paid Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <!--
      Restricted, unlike Charge_Line__c.Charge_Type__c. The difference is the data path:
      these five come from the FSD verbatim and are entered by a person in the UI, where a
      restricted list is a helpful guard rail. Charge types arrive through a monthly import,
      where a restricted list is a rejected row.
    -->
</CustomField>