force-app/main/default/objects/Meter_Allocation__c/fields/Allocation_Pct__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Pct__c</fullName>
    <description>The share of this meter consumption attributed to this space. Rolls up into Meter.Total Allocated Percent so an incomplete or double counted split is visible on the meter itself.</description>
    <inlineHelpText>Enter 25 for a quarter share, not 0.25. The shares on one meter would normally add up to 100; check Total Allocated Percent on the meter after editing.</inlineHelpText>
    <label>Allocation Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>